--- a/index.html
+++ b/index.html
@@ -7,25 +7,78 @@
       <!-- image to be used:
       https://ninjasfiles.s3.amazonaws.com/0000000000001395.png -->
 
-      <form action="" method="post"></form>
-    </header>
-
+      <form action="" method="post">
+        <label for="email">Email<label>
+        <input type="email" id="email" value="abc@gmail.com">
+        <label for="pass">Password<label>
+        <input type="password" id="pass" required>
+        <button type="submit"><img src="https://ninjasfiles.s3.amazonaws.com/0000000000001395.png" heiget="20" width="40" /> Login</button>
+      </form> 
+      <hr>
+     </header>
     <br />
     <br />
 
     <main>
       <section>
-        <h3></h3>
+        <h3><a href="www.codingninjas.in">Coding Ninjas Blogs</a></h3>
       </section>
-
+<img src="https://ninjasfiles.s3.amazonaws.com/0000000000001395.png">
       <br />
       <br />
 
-      <section>
-        <h2></h2>
+      <section> 
+        <hr>
+        <h2><u>REGISTRATION</u></h2>
 
         <form action="" method="post">
-          <table></table>
+          <table>
+  			<tr>
+            <td>First Name: </td>
+            <td><input type="text" required></td>
+          </tr>
+            <tr>
+              <td>Last Name: </td>
+              <td><input type="text" required></td>
+            </tr>
+            <tr>
+                <tr><td>Current Address: </td>
+                <td>
+            <table>
+                <tr>
+                <td>Flat No. /House No.:<td>
+                <td><input type="text" required></td>
+                </tr>
+                <tr>
+                <td>Locality:<td>
+                <td><input type="text" required></td>
+                </tr>
+                <tr>
+                <td>City:<td>
+                <td><input type="text" required></td>
+                </tr>
+                </table>
+                </td>
+            </tr> 
+            
+            <tr>
+            <td>Is Current address and permanent address is same:</td>
+            <td>
+            <input name="check" value="YES" type="radio">Yes
+            <input name="check" value="NO" type="radio">No
+            </td>
+            </tr>
+            <tr>
+            <td>Email: </td>
+            <td><input type="email" value="abc@gmail.com" required></td>
+            </tr>
+            <tr>
+              <td>Password: </td>
+              <td><input type="password" required></td>
+            </tr> 
+            <tr><td><input type="submit" value="Register" ></td></tr>
+</table>
+
         </form>
       </section>
     </main>
